--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - app/**
+      - tests/**
 jobs:
   run-tests:
     runs-on: ubuntu-latest
